--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -1,6 +1,11 @@
 <input type="button" value="Voortgang Tabel Zien" (click)="vulVoortgangen()">
 
-<table *ngFor="let voortgang of voortgangen">
+<input type="text" id="feedback" [(ngModel)]="feedback" (change)="veranderFeedback($event)">
+<input type="text" id="id" [(ngModel)]="id" (change)="veranderID($event)">
+<input type="button" value="geef feedback" (click)="setFeedback(feedback,id)">
+
+<div id="DeTabel">
+<table id="voortgangTabel" *ngFor="let voortgang of voortgangen">
     <tr><th>Oefening naam</th><th>Oefening id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
     <tr *ngFor="let v of voortgang">
             <td>{{v.oefening.naam}}</td>
@@ -11,3 +16,6 @@
             <td>{{v.feedback}}</td>
     </tr>
 </table>
+</div>
+
+
