--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -1,2 +1,31 @@
-<de-voortgang></de-voortgang>
-<de-oefening></de-oefening>
+<html>
+    <head>
+        <title>Bootstrap Example</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      </head>
+      <body>
+<div class="jumbotron text-center">
+    <h1>
+        Coach Hoofdscherm
+    </h1>
+    <p>
+        Help de studenten!
+    </p>
+</div><br>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <de-voortgang></de-voortgang>
+        </div>
+        <div class="col">
+            <de-oefening></de-oefening>
+        </div>
+    </div>
+</div>
+
+</body>
+</html>
