--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -18,10 +18,31 @@
 </div><br>
 <div class="container">
     <div class="row">
-        <div class="col">
+      <div class="col">
+        1 of 2
+      </div>
+      <div class="col">
+        2 of 2
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        1 of 3
+      </div>
+      <div class="col">
+        2 of 3
+      </div>
+      <div class="col">
+        3 of 3
+      </div>
+    </div>
+  </div><br><br><br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4">
             <de-voortgang></de-voortgang>
         </div>
-        <div class="col">
+        <div class="col-lg-4">
             <de-oefening></de-oefening>
         </div>
     </div>
