Coach frontend looks

--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -1,4 +1,7 @@
 <html>
+    <style>
+        
+    </style>
     <head>
         <title>Bootstrap Example</title>
         <meta charset="utf-8">
@@ -10,16 +13,18 @@
       <body>
 <div class="jumbotron text-center">
     <h1>
-        Coach Hoofdscherm
+        Coach
     </h1>
     <p>
-        Help de studenten!
+        Jij bent de coach!<br>Help de sporters!
     </p>
 </div><br>
 <div class="container">
     <div class="row">
         <div class="col-lg-4">
             <de-voortgang></de-voortgang>
+        </div>
+        <div class="col-lg-4">
         </div>
         <div class="col-lg-4">
             <de-oefening></de-oefening>
