--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -1,15 +1,31 @@
+<html>
+    <style>
+        th{
+            text-align: center;
+        }
+        tr{
+            text-align: center;
+        }
+        table{
+            width: 1000px;
+            border: 1px solid black;
+        }
+        tr:nth-child(odd) {background-color: #444444;}
+        tr:nth-child(odd) {color: #ffffff}
+    </style>
+    <body>
 <input type="button" value="Voortgang Tabel Zien" (click)="vulVoortgangen()">
 <input type="button" value="Schoon scherm" (click)="schoonScherm()"><br>
 
-<table>
-    <tr><td>Feedback:</td> <td><input type="text" id="feedback" [(ngModel)]="feedback" (change)="veranderFeedback($event)"></td></tr>
-    <tr><td>Voortgang ID:</td> <td><input type="text" id="id" [(ngModel)]="id" (change)="veranderID($event)"></td></tr>
+<table style="width: 300px; border: 1px solid white;">
+    <tr style="background-color: #ffffff;color: #000000;"><td>Feedback:</td> <td><input type="text" id="feedback" [(ngModel)]="feedback" (change)="veranderFeedback($event)"></td></tr>
+    <tr style="background-color: #ffffff;color: #000000;"><td>Voortgang ID:</td> <td><input type="text" id="id" [(ngModel)]="id" (change)="veranderID($event)"></td></tr>
 </table>
 <input type="button" value="geef feedback" (click)="setFeedback(feedback,id)"><input type="button" value="Check ID" (click)="checkID(id)"><br>
 
 <div id="DivCheckID">
     <table id="voortgangTabelIDCheck" *ngFor="let v of voortgangenIDCheck">
-            <tr><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
+            <tr style="font-size: larger;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
             <tr>
             <td>{{v.oefening.naam}}</td>
             <td>{{v.id}}</td>
@@ -20,10 +36,12 @@
             </tr>
     </table>
 </div>
-
+<div id="separator" *ngIf="voortgangenIDCheck.length>0">
+    <br><br><br>
+</div>
 <div id="DeTabel">
 <table id="voortgangTabel" *ngFor="let voortgang of voortgangen">
-    <tr><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
+    <tr style="font-size: larger;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
     <tr *ngFor="let v of voortgang">
             <td>{{v.oefening.naam}}</td>
             <td>{{v.id}}</td>
@@ -32,7 +50,12 @@
             <td>{{v.antwoorden}}</td>
             <td>{{v.feedback}}</td>
     </tr>
-</table>
+</table><br><br><br>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+</body>
+</html>
 
