angular Planning dingen

--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -1,6 +1,5 @@
-
-<div id="test" hidden>
+<de-GegevenTraining></de-GegevenTraining>
+<div hidden>
     <de-voortgang></de-voortgang>
+    <de-oefening></de-oefening>
 </div>
-
-<de-oefening></de-oefening>
