--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -4,7 +4,7 @@
         
     </style>
     <head>
-        <title>Bootstrap Example</title>
+        <title>Coach Scherm</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -26,6 +26,7 @@
             <de-voortgang></de-voortgang>
         </div>
         <div class="col-lg-4">
+            <de-planning></de-planning>
         </div>
         <div class="col-lg-4">
             <de-oefening></de-oefening>
