--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -7,22 +7,48 @@
             text-align: center;
         }
         table{
-            width: 1000px;
+            width: 300%;
             border: 1px solid black;
         }
         tr:nth-child(odd) {background-color: #444444;}
         tr:nth-child(odd) {color: #ffffff}
+        .button {
+            background-color: white; 
+            color: black; 
+            border: 2px solid #008CBA;
+            padding: 1px 8px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            -webkit-transition-duration: 0.4s; /* Safari */
+            transition-duration: 0.4s;
+            width: 40%;
+        }
+input[type="file"] {
+    display: none;
+}
+.button1:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #008CBA;
+  color: white;
+  border-radius: 12px;
+}
     </style>
     <body>
-<input type="button" value="Voortgang Tabel Zien" (click)="vulVoortgangen()">
-<input type="button" value="Schoon scherm" (click)="schoonScherm()"><br>
 
-<table style="width: 300px; border: 1px solid white;">
+
+<table style="width: 100%; border: 1px solid white;">
+    <tr style="background-color: #ffffff;color: #000000;"><td><input type="button" style="width:99%" class="button button1" value="Voortgang Tabel" (click)="vulVoortgangen()">
+    </td><td><input type="button" style="width:99%" class="button button1" value="Schoon scherm" (click)="schoonScherm()"> </td>
     <tr style="background-color: #ffffff;color: #000000;"><td>Feedback:</td> <td><input type="text" id="feedback" [(ngModel)]="feedback" (change)="veranderFeedback($event)"></td></tr>
     <tr style="background-color: #ffffff;color: #000000;"><td>Voortgang ID:</td> <td><input type="text" id="id" [(ngModel)]="id" (change)="veranderID($event)"></td></tr>
+    <tr style="background-color: #ffffff;color: #000000;"><td><input type="button" style="width:99%" class="button button1" value="Geef feedback" (click)="setFeedback(feedback,id)"></td><td><input type="button" style="width:99%" class="button button1" value="Check ID" (click)="checkID(id)"></td>
 </table>
-<input type="button" value="geef feedback" (click)="setFeedback(feedback,id)"><input type="button" value="Check ID" (click)="checkID(id)"><br>
 
+<br><br><br>
 <div id="DivCheckID">
     <table id="voortgangTabelIDCheck" *ngFor="let v of voortgangenIDCheck">
             <tr style="font-size: larger;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
