--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -1,7 +1,10 @@
 
 <html>
     <style>
-        
+        .jumbotron{
+            background-color: rgb(120, 20, 20);
+            color: rgb(255, 255, 255);
+        }
     </style>
     <head>
         <title>Coach Scherm</title>
@@ -13,6 +16,7 @@
       </head>
       <body>
 <div class="jumbotron text-center">
+    
     <h1>
         Coach
     </h1>
@@ -20,6 +24,7 @@
         Jij bent de coach!<br>Help de sporters!
     </p>
 </div><br>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-4">
