--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -1,5 +1,17 @@
 <html>
 <style>
+    th{
+            text-align: center;
+        }
+    tr{
+            text-align: center;
+    }
+    table{
+            width: 100%;
+            border: 1px solid black;
+    }
+        tr:nth-child(odd) {background-color: #666666;}
+        tr:nth-child(odd) {color: #ffffff}
     .button {
         background-color: white; 
         color: black; 
@@ -52,12 +64,25 @@ input[type="file"] {
         <input type="file" (change)="onFileSelected($event)"/>
         Selecteer een foto...
     </label>
-<!--<input type="file" (change)="onFileSelected($event)">--><br>
-<input type="text" (change)="setOefeningID($event)"><input type="button" class="button button1" value="Check ID" (click)="getOefeningById()"><br>
-<div id="ID Check" *ngFor="let o of oefeningen">
-    {{o.naam}}
+<br>
+<input type="text" (change)="setOefeningID($event)">
+<input type="button" class="button button1" value="Check ID" (click)="getOefeningById()">
+<input type="button" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"><input type="button" class="button button1" value="Schoon scherm" (click)="schoonScherm()"><br>
+<div id="Check id" *ngIf="oefeningen.length==1">
+    <table id="ID Check" *ngFor="let o of oefeningen">
+        <tr style="font-size: larger; background-color: #333333;"><th>ID</th><th>Oefening naam</th></tr>
+        <tr><td>{{o.id}}</td> <td>{{o.naam}}</td></tr>
+    </table>
 </div>
-
+<div id="Check id2" *ngIf="oefeningen.length>1">
+    <table id="ID Check" >
+        <tr style="font-size: larger; background-color: #333333;"><th>ID</th><th>Oefening naam</th></tr>
+        <tr *ngFor="let o of oefeningen">
+            <td>{{o.id}}</td> 
+            <td>{{o.naam}}</td>
+        </tr>
+    </table>
+</div>
 <input type="button" class="button button1" value="Upload" (click)="onUpload()">
 </body>
 </html>
