--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -10,7 +10,7 @@
             width: 300%;
             border: 1px solid black;
         }
-        tr:nth-child(odd) {background-color: #444444;}
+        tr:nth-child(odd) {background-color: #666666;}
         tr:nth-child(odd) {color: #ffffff}
         .button {
             background-color: white; 
@@ -38,8 +38,6 @@ input[type="file"] {
 }
     </style>
     <body>
-
-
 <table style="width: 100%; border: 1px solid white;">
     <tr style="background-color: #ffffff;color: #000000;"><td><input type="button" style="width:99%" class="button button1" value="Voortgang Tabel" (click)="vulVoortgangen()">
     </td><td><input type="button" style="width:99%" class="button button1" value="Schoon scherm" (click)="schoonScherm()"> </td>
@@ -67,7 +65,7 @@ input[type="file"] {
 </div>
 <div id="DeTabel">
 <table id="voortgangTabel" *ngFor="let voortgang of voortgangen">
-    <tr style="font-size: larger;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
+    <tr style="font-size: larger; background-color: #333333;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
     <tr *ngFor="let v of voortgang">
             <td>{{v.oefening.naam}}</td>
             <td>{{v.id}}</td>
@@ -81,7 +79,7 @@ input[type="file"] {
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+<div id="plaatje"><img src="C:\java\Powerliften\Powerlift_App\Frontend\Daan.jpg"></div>
 </body>
 </html>
 
