--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -63,8 +63,13 @@ input[type="file"] {
     <label class="custom-file-upload">
         <input type="file" (change)="onFileSelected($event)"/>
         Selecteer een foto...
-    </label>
+    </label><input type="button" class="button button1" value="Upload" (click)="onUpload()">
 <br>
+<div id="foto-naam" *ngIf="fileSelected">
+    Geselecteerd: {{deFoto.name}}<br>
+    Geef een ID op en klik op Upload te uploaden!
+    <br>
+</div>
 <input type="text" (change)="setOefeningID($event)">
 <input type="button" class="button button1" value="Check ID" (click)="getOefeningById()">
 <input type="button" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"><input type="button" class="button button1" value="Schoon scherm" (click)="schoonScherm()"><br>
@@ -83,6 +88,6 @@ input[type="file"] {
         </tr>
     </table>
 </div>
-<input type="button" class="button button1" value="Upload" (click)="onUpload()">
+
 </body>
 </html>
