--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -60,19 +60,23 @@ input[type="file"] {
 }
 </style>
 <body>
-    <label class="custom-file-upload">
-        <input type="file" (change)="onFileSelected($event)"/>
+    <table id="de oefeningen" style="border: 1px white;">
+    <tr style="background-color: white;color: black;"><td><label style="width: 99%;" class="custom-file-upload">
+        <input type="file"  (change)="onFileSelected($event)"/>
         Selecteer een foto...
-    </label><input type="button" class="button button1" value="Upload" (click)="onUpload()">
-<br>
-<div id="foto-naam" *ngIf="fileSelected">
-    Geselecteerd: {{deFoto.name}}<br>
+</label><div id="foto-naam" *ngIf="fileSelected">
+    <br>Geselecteerd: {{deFoto.name}}<br>
     Geef een ID op en klik op Upload te uploaden!
     <br>
-</div>
-<input type="text" (change)="setOefeningID($event)">
-<input type="button" class="button button1" value="Check ID" (click)="getOefeningById()">
-<input type="button" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"><input type="button" class="button button1" value="Schoon scherm" (click)="schoonScherm()"><br>
+</div></td>
+<td><input type="button" style="width: 99%;" class="button button1" value="Upload" (click)="onUpload()"></td></tr>
+
+<tr style="background-color: white;color: black;"><td><input type="text" style="width: 99%;" (change)="setOefeningID($event)"></td>
+<td><input type="button" style="width: 99%;" class="button button1" value="Check ID" (click)="getOefeningById()"></td></tr>
+<tr style="background-color: white;color: black;"><td><input type="button" style="width: 99%;" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"></td>
+<td><input type="button" style="width: 99%;" class="button button1" value="Schoon scherm" (click)="schoonScherm()"></td></tr>
+</table>
+
 <div id="Check id" *ngIf="oefeningen.length==1">
     <table id="ID Check" *ngFor="let o of oefeningen">
         <tr style="font-size: larger; background-color: #333333;"><th>ID</th><th>Oefening naam</th></tr>
@@ -83,7 +87,7 @@ input[type="file"] {
     <table id="ID Check" >
         <tr style="font-size: larger; background-color: #333333;"><th>ID</th><th>Oefening naam</th></tr>
         <tr *ngFor="let o of oefeningen">
-            <td>{{o.id}}</td> 
+            <td>{{o.id}}</td>
             <td>{{o.naam}}</td>
         </tr>
     </table>
