--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -41,15 +41,15 @@ input[type="file"] {
 <table style="width: 100%; border: 1px solid white;">
     <tr style="background-color: #ffffff;color: #000000;"><td><input type="button" style="width:99%" class="button button1" value="Voortgang Tabel" (click)="vulVoortgangen()">
     </td><td><input type="button" style="width:99%" class="button button1" value="Schoon scherm" (click)="schoonScherm()"> </td>
-    <tr style="background-color: #ffffff;color: #000000;"><td>Feedback:</td> <td><input type="text" id="feedback" [(ngModel)]="feedback" (change)="veranderFeedback($event)"></td></tr>
-    <tr style="background-color: #ffffff;color: #000000;"><td>Voortgang ID:</td> <td><input type="text" id="id" [(ngModel)]="id" (change)="veranderID($event)"></td></tr>
+    <tr style="background-color: #ffffff;color: #000000;"><td>Feedback:</td> <td><input type="text" style="width:99%" id="feedback" [(ngModel)]="feedback" (change)="veranderFeedback($event)"></td></tr>
+    <tr style="background-color: #ffffff;color: #000000;"><td>Voortgang ID:</td> <td><input type="text" style="width:99%" id="id" [(ngModel)]="id" (change)="veranderID($event)"></td></tr>
     <tr style="background-color: #ffffff;color: #000000;"><td><input type="button" style="width:99%" class="button button1" value="Geef feedback" (click)="setFeedback(feedback,id)"></td><td><input type="button" style="width:99%" class="button button1" value="Check ID" (click)="checkID(id)"></td>
 </table>
 
 <br><br><br>
 <div id="DivCheckID">
     <table id="voortgangTabelIDCheck" *ngFor="let v of voortgangenIDCheck">
-            <tr style="font-size: larger;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
+            <tr style="font-size: larger; background-color: #333333;"><th>Oefening naam</th><th>Voortgang id</th><th>Gebruikte gewicht</th><th>Aantal reps</th><th>Gevoel</th><th>Feedback</th></tr>
             <tr>
             <td>{{v.oefening.naam}}</td>
             <td>{{v.id}}</td>
