--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -2,7 +2,7 @@
 <html>
     <style>
         .jumbotron{
-            background-color: rgb(120, 20, 20);
+            background-color: rgb(120, 10, 30);
             color: rgb(255, 255, 255);
         }
         .column {
@@ -29,7 +29,7 @@
 <div class="jumbotron text-center">
     <div class="container">
         <div class="row">
-            <div class="column"><img src="https://krachttraining.net/wp-content/uploads/2016/11/shutterstock_425575663.jpg" width="100%"></div>
+            <div class="column"><img src="https://st2.depositphotos.com/4165281/8009/v/450/depositphotos_80090842-stock-illustration-gym-logo-in-vintage-style.jpg" width="50%"></div>
             <div class="column"><h1>
                 Coach
             </h1>
@@ -39,7 +39,7 @@
         </div>
             <div class="column" style="font-size: large;">
                 <h2>
-                    Welkom Coachnaam!
+                    <de-coach></de-coach>
                 </h2>
             </div>
           </div> 
