--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -2,8 +2,8 @@
 <html>
     <style>
         .jumbotron{
-            background-color: rgb(120, 10, 30);
-            color: rgb(255, 255, 255);
+            background-color: rgb(204, 204, 204);
+            color: rgb(0,0,0);
         }
         .column {
             float: left;
