planning maken Coach zo goed als af

--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -22,14 +22,13 @@
 </div><br>
 <div class="container">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4" hidden>
             <de-voortgang></de-voortgang>
         </div>  
         <div class="col-lg-4">
             <de-planning></de-planning>
-
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4" hidden>
             <de-oefening></de-oefening>
         </div>
     </div>
