--- a/Frontend/Powerliften-coach/src/app/GegevenTraining/GegevenTraining.component.html
+++ b/Frontend/Powerliften-coach/src/app/GegevenTraining/GegevenTraining.component.html
@@ -1,13 +1,15 @@
-<h1>Training</h1>
+
 <label>Oefening</label>
-<select >
-    <option ng-repeat = "x in oefeningen">{{x}}</option>
-</select> <br>
-<type="number" (change)="setOefening($event)"><br>
+<select (change) = setOefening($event)>
+    <option *ngFor="let x of oefeningen" [value] = "x.id">{{x.naam}}</option>    
+</select>
+
+<br>
 <label>Datum</label>
 <input type="datetime-local" (change)="setTijd($event)"> <br>
 <label>Aantal Reps</label>
 <input type="number" (change)="setAantalReps($event)"><br>
 <label>Gewicht</label>
-<input type="number" (change) = "setGewicht($event)">
+<input type="number" (change) = "setGewicht($event)"><br>
+<input type="button" value = "Sla de traing op" (click) = "saveTraining()">;
 
