--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -18,7 +18,7 @@
 input[type="file"] {
     display: none;
 }
-.button1:hover {
+.button:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   background-color: #008CBA;
   color: white;
@@ -58,6 +58,6 @@ input[type="file"] {
     {{o.naam}}
 </div>
 
-<input type="button" class="button button1" value="Upload" (click)="onUpload()">
+<input type="button" class="button" value="Upload" (click)="onUpload()">
 </body>
 </html>
