--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -26,46 +26,48 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       </head>
       <body>
-<div class="jumbotron text-center">
-    <div class="container">
-        <div class="row">
-            <div class="column"><img src="https://st2.depositphotos.com/4165281/8009/v/450/depositphotos_80090842-stock-illustration-gym-logo-in-vintage-style.jpg" width="50%"></div>
-            <div class="column"><h1>
-                Coach
-            </h1>
-            <p>
-                Jij bent de coach!<br>Help de sporters!
-            </p>
-        </div>
-            <div class="column" style="font-size: large;">
-                    <de-coach></de-coach>
+    <div class="jumbotron text-center">
+        <div class="container">
+            <div class="row">
+                <div class="column"><img src="https://st2.depositphotos.com/4165281/8009/v/450/depositphotos_80090842-stock-illustration-gym-logo-in-vintage-style.jpg" width="50%"></div>
+                    <div class="column">
+                        <h1>
+                            Coach
+                        </h1>
+                        <p>
+                            Jij bent de coach!<br>Help de sporters!
+                        </p>
+                    </div>
+                    <div class="column" style="font-size: large;">
+                        <de-coach></de-coach>
+                    </div>
+                </div> 
             </div>
-          </div> 
-    </div>
-</div>
-<ul class="nav nav-pills">
-    <li class="nav-item">
-      <button type="button" class="btn btn-outline-primary" (click) = "showScherm(1)">Planning maken</button>
-    </li>
-    <li class="nav-item">
-        <button type="button" class="btn btn-outline-primary" (click) = "showScherm(2)">Oefening maken</button>
-    </li>
-    <li class="nav-item">
-        <button type="button" class="btn btn-outline-primary" (click) = "showScherm(3)">Voortgangen bekijken</button>
-    </li>
-</ul>
-<div class="container" hidden>
-    <div class="row">
-        <div class="col-lg-4">
-            <de-voortgang></de-voortgang>
-        </div>  
-        <div class="col-lg-4">
-            <de-planning></de-planning>
         </div>
-        <div class="col-lg-4">
-            <de-oefening></de-oefening>
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+            <button type="button" class="btn btn-outline-primary" (click) = "showScherm(1)">Planning maken</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="btn btn-outline-primary" (click) = "showScherm(2)">Oefening maken</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="btn btn-outline-primary" (click) = "showScherm(3)">Voortgangen bekijken</button>
+        </li>
+    </ul>
+    <div class="container" hidden>
+        <div class="row">
+            <div class="col-lg-4">
+                <de-voortgang></de-voortgang>
+            </div>  
+            <div class="col-lg-4">
+                <de-planning></de-planning>
+            </div>
+            <div class="col-lg-4">
+                <de-oefening></de-oefening>
+            </div>
         </div>
     </div>
-</body>
+    </body>
 </html>
 
