kleine aanpassing nu werkt het weer

--- a/Frontend/Powerliften-coach/src/app/app.component.html
+++ b/Frontend/Powerliften-coach/src/app/app.component.html
@@ -55,19 +55,17 @@
             <button type="button" class="btn btn-outline-primary" (click) = "showScherm(3)">Voortgangen bekijken</button>
         </li>
     </ul>
-    <div class="container" hidden>
-        <div class="row">
-            <div class="col-lg-4">
+
+            <div id="voortgang" hidden>
                 <de-voortgang></de-voortgang>
             </div>  
-            <div class="col-lg-4">
+            <div id="planning" hidden>
                 <de-planning></de-planning>
             </div>
-            <div class="col-lg-4">
+            <div id="oefening" hidden>
                 <de-oefening></de-oefening>
             </div>
-        </div>
-    </div>
+
     </body>
 </html>
 
