--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -71,8 +71,8 @@ input[type="file"] {
 </div></td>
 <td><input type="button" style="width: 99%;" class="button button1" value="Upload" (click)="onUpload()"></td></tr>
 
-<tr style="background-color: white;color: black;"><td><input type="text" style="width: 99%;" (change)="setOefeningID($event)"></td>
-<td><input type="button" style="width: 99%;" class="button button1" value="Check ID" (click)="getOefeningById()"></td></tr>
+<tr style="background-color: white;color: black;"><td><input type="text" style="width: 99%;" [(ngModel)]="oefeningNaam"></td>
+<td><input type="button" style="width: 99%;" class="button button1" value="Check Oefening" (click)="getOefeningByNaam()"></td></tr>
 <tr style="background-color: white;color: black;"><td><input type="button" style="width: 99%;" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"></td>
 <td><input type="button" style="width: 99%;" class="button button1" value="Schoon scherm" (click)="schoonScherm()"></td></tr>
 </table>
