--- a/Frontend/Powerliften-coach/src/app/Planning/Planning.component.html
+++ b/Frontend/Powerliften-coach/src/app/Planning/Planning.component.html
@@ -13,7 +13,7 @@
 <div id="trainingScherm" hidden>
     <label>Oefening</label>
     <select (change)=setOefening($event)>
-        <option *ngFor="let x of oefeningen" value={{x.id}}>{{x.naam}}</option>
+        <option *ngFor="let x of oefeningen" value={{x.naam}}>{{x.naam}}</option>
     </select>
     <br>
     <label>Datum</label>
