Update knoppen en begonnen aan look van de coach

--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -59,6 +59,14 @@ input[type="file"] {
     color: white;
 }
 </style>
+<head>
+    <title>Coach Scherm</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </head>
 <body>
     <table id="de oefeningen" style="border: 1px white;">
     <tr style="background-color: white;color: black;"><td><label style="width: 99%;" class="custom-file-upload">
