--- a/Frontend/Powerliften-coach/src/app/Planning/Planning.component.html
+++ b/Frontend/Powerliften-coach/src/app/Planning/Planning.component.html
@@ -66,20 +66,23 @@
 <div id="verwijderScherm" hidden>
     <input type=number [(ngModel)]=verwijderID>
     <input type="button" class="button button1" (click) = "verwijderTrainingByID()" value="verwijder Oefening">
-    <input type="button" class="button button1" (click) = "maakPlanningSporter()" value="Ga terug"> 
+    <input type="button" class="button button1" (click) = "gaTerug()" value="Ga terug"> 
 </div>
 <div id="trainingenBekijken" hidden>
     <table class="table">
         <thead class="thead-dark">
             <tr>
+                <th scope="col">Index</th>
                 <th scope="col">Tijd</th>
                 <th scope="col">Oefening</th>
                 <th scope="col">Aantal Reps </th>
                 <th scope="col">Gewicht</th>
             </tr>
         </thead>
-        <tbody *ngFor = "let x of trainingen">
+        <tbody *ngFor = "let x of trainingen; index as i"> 
+            <script>setIndex()</script>
             <tr>
+                <td>{{i}}</td>
                 <td>{{x.tijd}}</td>
                 <td>{{x.oefening.naam}}</td>
                 <td>{{x.aantalReps}}</td>
