--- a/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
+++ b/Frontend/Powerliften-coach/src/app/Oefening/oefening.component.html
@@ -1,5 +1,10 @@
 <html>
 <style>
+    table.center {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     th{
             text-align: center;
         }
@@ -7,7 +12,7 @@
             text-align: center;
     }
     table{
-            width: 100%;
+            width: 50%;
             border: 1px solid black;
     }
         tr:nth-child(odd) {background-color: #666666;}
@@ -68,8 +73,8 @@ input[type="file"] {
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 <body>
-    <table id="de oefeningen" style="border: 1px white;">
-    <tr style="background-color: white;color: black;"><td><label style="width: 99%;" class="custom-file-upload">
+    <table class="center" id="de oefeningen" style="border: 1px white;">
+    <tr style="background-color: white;color: black;"><td><label style="width: 50%;" class="custom-file-upload">
         <input type="file"  (change)="onFileSelected($event)"/>
         Selecteer een foto...
 </label><div id="foto-naam" *ngIf="fileSelected">
@@ -77,12 +82,12 @@ input[type="file"] {
     Geef een ID op en klik op Upload te uploaden!
     <br>
 </div></td>
-<td><input type="button" style="width: 99%;" class="button button1" value="Upload" (click)="onUpload()"></td></tr>
+<td><input type="button" style="width: 50%;" class="button button1" value="Upload" (click)="onUpload()"></td></tr>
 
-<tr style="background-color: white;color: black;"><td><input type="text" style="width: 99%;" [(ngModel)]="oefeningNaam"></td>
-<td><input type="button" style="width: 99%;" class="button button1" value="Check Oefening" (click)="getOefeningByNaam()"></td></tr>
-<tr style="background-color: white;color: black;"><td><input type="button" style="width: 99%;" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"></td>
-<td><input type="button" style="width: 99%;" class="button button1" value="Schoon scherm" (click)="schoonScherm()"></td></tr>
+<tr style="background-color: white;color: black;"><td><input type="text" style="width: 50%;" [(ngModel)]="oefeningNaam"></td>
+<td><input type="button" style="width: 50%;" class="button button1" value="Check Oefening" (click)="getOefeningByNaam()"></td></tr>
+<tr style="background-color: white;color: black;"><td><input type="button" style="width: 50%;" class="button button1" value="Alle Oefeningen" (click)="getAllOefeningen()"></td>
+<td><input type="button" style="width: 50%;" class="button button1" value="Schoon scherm" (click)="schoonScherm()"></td></tr>
 </table>
 
 <div id="Check id" *ngIf="oefeningen.length==1">
