--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -9,6 +9,7 @@
         table{
             width: 100%;
             border: 1px solid black;
+            font-size: medium;
         }
         tr:nth-child(odd) {background-color: #666666;}
         tr:nth-child(odd) {color: #ffffff}
@@ -36,10 +37,13 @@ input[type="file"] {
   color: white;
   border-radius: 12px;
 }
+div {
+        font-size: medium;
+    }
     </style>
-    <body>
+    
 
-        <div id="sporterScherm">
+        <div id="sporterScherm" >
             <br> <label>Sporter: </label> <br>
             <select (change)="setSporter($event)">
                 <option *ngFor="let x of sporters" value={{x.id}}>{{x.naam}}</option>
@@ -89,6 +93,6 @@ input[type="file"] {
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+
 </html>
 
