--- a/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
+++ b/Frontend/Powerliften-coach/src/app/Voortgang/voortgang.component.html
@@ -43,7 +43,7 @@ div {
     </style>
     
 
-        <div id="sporterScherm" >
+        <div id="sporterSchermVoortgang" >
             <br> <label>Sporter: </label> <br>
             <select (change)="setSporter($event)">
                 <option *ngFor="let x of sporters" value={{x.id}}>{{x.naam}}</option>
